changes made in player

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fas fa-2x fa-step-backward" id="previous"></i>
-            <i class="far fa-2x fa-play-circle" id="masterPlay"></i>
+            <i class="far fa-2x fa-pause-circle" id="masterPlay"></i>
             <i class="fas fa-2x fa-step-forward" id="next"></i> 
         </div>
         <div class="songInfo">
